--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Laravel Echo Node JS Server for Socket.io",
   "repository": {
     "type": "git",
-    "url": "https://github.com/tlaverdure/Laravel-Echo-Server.git"
+    "url": "https://github.com/infister/laravel-echo-server.git"
   },
   "main": "dist/index.js",
   "keywords": [
@@ -19,7 +19,8 @@
   "scripts": {
     "build": "tsc",
     "dev": "tsc -w",
-    "prepublish": "npm run build"
+    "prepublish": "npm run build",
+    "postinstall": "cd node_modules/laravel-echo-server && npm install && npm run build"
   },
   "dependencies": {
     "colors": "^1.1.2",
