--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
   "scripts": {
     "build": "tsc",
     "dev": "tsc -w",
-    "prepublish": "npm run build",
-    "postinstall": "npm run build"
+    "prepublish": "npm run build"
   },
   "dependencies": {
     "colors": "^1.1.2",
