--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "laravel-echo-server",
-  "version": "1.5.9",
+  "name": "laravel-echo-server-socketio",
+  "version": "1.6.0",
   "description": "Laravel Echo Node JS Server for Socket.io",
   "repository": {
     "type": "git",
-    "url": "https://github.com/infister/laravel-echo-server.git"
+    "url": "git+https://github.com/infister/laravel-echo-server.git"
   },
   "main": "dist/index.js",
   "keywords": [
@@ -27,14 +27,14 @@
     "express": "^4.14.0",
     "inquirer": "^1.1.3",
     "ioredis": "^3.2.2",
-    "lodash": "^4.17.10",
+    "lodash": "^4.17.5",
     "request": "^2.87.0",
     "socket.io": "^2.1.1",
     "yargs": "^11.0.0"
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.93",
-    "@types/node": "^6.0.60",
+    "@types/lodash": "^4.14.112",
+    "@types/node": "^6.14.9",
     "typescript": "^2.6.0"
   },
   "peerDependecies": {
@@ -42,5 +42,12 @@
   },
   "bin": {
     "laravel-echo-server": "bin/server.js"
+  },
+  "bugs": {
+    "url": "https://github.com/infister/laravel-echo-server/issues"
+  },
+  "homepage": "https://github.com/infister/laravel-echo-server#readme",
+  "directories": {
+    "example": "examples"
   }
 }
