--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "laravel-echo-server-socketio",
-  "version": "1.6.2",
+  "version": "1.6.5",
   "description": "Laravel Echo Node JS Server for Socket.io",
   "repository": {
     "type": "git",
@@ -22,7 +22,8 @@
     "prepublish": "npm run build"
   },
   "dependencies": {
-    "colors": "^1.1.2",
+    "@sentry/node": "^5.11.1",
+    "colors": "1.4.0",
     "dotenv": "^5.0.1",
     "express": "^4.14.0",
     "inquirer": "^1.1.3",
